# python-docs-theme-ubs

./: Makefile  README.md  README.rst  pyproject.toml
.github/: FUNDING.yml
pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh
python_docs_theme_ubs/: __init__.py  layout.html  theme.conf
python_docs_theme_ubs/backup/: layout.html
python_docs_theme_ubs/orig/: layout.html  theme.conf
