[build-system]
requires = ["flit_core>=3.7"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "python-docs-theme-ubs"
version = "1.1.1"
description = "The Sphinx theme for the UNICORN Binance Suite documentation"
readme = "README.md"
urls.Code = "https://github.com/oliver-zehentleitner/python-docs-theme-ubs"
urls.Download = "https://pypi.org/project/python-docs-theme-ubs/"
urls.Homepage = "https://github.com/oliver-zehentleitner/python-docs-theme-ubs"
urls."Issue tracker" = "https://github.com/oliver-zehentleitner/python-docs-theme-ubs/issues"
license.text = "PSF-2.0"
requires-python = ">=3.8"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Oliver Zehentleitner"

[project.entry-points."sphinx.html_themes"]
python_docs_theme_ubs = 'python_docs_theme_ubs'

[tool.flit.module]
name = "python_docs_theme_ubs"

[tool.flit.sdist]
include = [
    "python_docs_theme_ubs/",
]
